# course-paper5SQL

./: .gitignore  README.md  api_hh.py  config.py  database.py  employer.py  main.py  manager.py  pyproject.toml  utils.py  vacancy.py
